@@ -1,3 +1,8 @@
+27/10/2024:
+	- Added ability to inject ICC profile and XMP metadata into pre-encoded tiles returned from TIFF images. These
+	  are essentially raw bitstreams with no container. Works for both JPEG and WebP formats.
+
+
 17/10/2024:
 	- Added basic test script for use via "make check" that tests whether iipsrv can be executed and whether it
 	  can create a log file.
